# mcp-client

./: .gitignore  LICENSE  README.md  app.py  cli.py  gui.py  mcp-server-config.example.json  mcp-server-config.json  pyproject.toml  requirements.txt  test.db
.roo/: mcp.json
mcp_client/: base.py
project_journal/planning/: project_overview.md
project_journal/tasks/: nicegui_chat_ui.md
