[project]
name = "mcp_client"
version = "0.1.0"
description = "Command line and REST client for MCP servers"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain-anthropic>=0.3.0",
    "langchain>=0.3.10",
    "langchain-core>=0.3.22",
    "mcp>=1.0.0",
    "python-dotenv>=1.0.1",
    "langchain-openai>=0.2.10",
    "langchain-ollama<=0.2.2rc1",
    "jsonschema-pydantic>=0.6",
    "aiosqlite>=0.20.0",
    "langgraph-checkpoint-sqlite>=2.0.1",
    "langchain-anthropic>=0.3.0",
    "langchain-google-genai>=0.2.0",
    "langchain-groq>=0.2.0",
    "langchain-aws>=0.2.9",
    "langchain-together>=0.2.0",
    "langchain-fireworks>=0.2.0",
    "requests>=2.32.3",
    "fastapi>=0.70.0",
    "uvicorn>=0.15.0",
]
license = { text = "MIT" }
